--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,6 @@
 @import url(/styles/user.css);
+@import url(/styles/social.css);
+@import url(/styles/about.css);
 
 * {
     margin: 0;
@@ -37,10 +39,6 @@ body {
     margin: 160px auto 100px;
 }
 
-section {
-    height: 400px;
-}
-
 .projects {
     grid-column: 1 / 3;
 }
@@ -49,4 +47,9 @@ section {
     border-radius: 12px;
     background: var(--background-card);
     box-shadow: var(--shadow-card);
+}
+
+.subtitle {
+    font-size: 28px;
+    font-weight: 600;
 }
